// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<main
  className="src-shared-components-page-main__page-main"
>
  <div
    id="child"
  />
</main>
`;

exports[`should render correctly when has an error 1`] = `
<main
  className="src-shared-components-page-main__page-main"
>
  <Error
    type="DEFAULT"
  />
</main>
`;

exports[`should render correctly when has no children 1`] = `
<main
  className="src-shared-components-page-main__page-main"
/>
`;
